add tests for the RaoRunnerService